<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".settingsActivity">

    <RelativeLayout android:layout_width="match_parent" android:layout_height="50dp" android:padding="0px"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:gravity="center" android:background="#00ACC1"
                    android:id="@+id/relativeLayout">

        <TextView android:layout_width="wrap_content" android:layout_height="match_parent"
                  android:text="" android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                  android:textColor="@color/colorText" android:layout_marginStart="10dp"
                  android:layout_marginLeft="10dp" android:id="@+id/kompleks_obiekt"/>
    </RelativeLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent">
        <ScrollView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2">
            <LinearLayout android:layout_width="wrap_content" android:layout_height="match_parent"
                          android:orientation="vertical" android:id="@+id/lista_elementow"/>
        </ScrollView>

        <ScrollView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.8">
            <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                          android:orientation="vertical" android:id="@+id/formularz"
                          android:layout_marginTop="20px"
                          android:layout_marginLeft="20px"
                          android:layout_marginRight="20px">

                <Button android:layout_width="match_parent" android:layout_height="wrap_content"
                        android:gravity="center" android:text="@string/wybrano" android:layout_marginTop="20px"
                        android:textSize="14sp" android:background="#00ACC1" android:id="@+id/form_title"/>

                <Button android:layout_width="match_parent" android:layout_height="wrap_content"
                        android:gravity="center" android:text="@string/konstrukcja" android:layout_marginTop="20px"
                        android:textSize="14sp" android:background="#f5f5f5"/>
                <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:id="@+id/checkboxes" android:orientation="vertical" android:layout_marginTop="20px">


                </LinearLayout>

                <Button android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:gravity="center" android:text="@string/zuzycie" android:layout_marginTop="20px"
                          android:textSize="14sp" android:background="#f5f5f5"/>
                <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/seekBar"
                    android:layout_weight="1"
                    android:layout_marginTop="20px"/>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20px"
                        android:id="@+id/progress_text"
                        android:gravity="center"
                        android:text="@string/zero"/>

                <Button android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:gravity="center" android:text="@string/usterki" android:layout_marginTop="20px"
                          android:textSize="14sp" android:background="#f5f5f5"/>

                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="match_parent"
                              android:id="@+id/checkboxes_usterki"
                              android:orientation="vertical"
                              android:layout_marginTop="20px">


                </LinearLayout>

                <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:text="@string/dalej" android:id="@+id/save_button"
                        android:layout_gravity="right" android:layout_marginRight="25px"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>